--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,9 +28,9 @@ html {
 }
 
 @font-face {
-	font-family: 'Beliau';
+	font-family: 'Beliau-Regular';
 	src: url('../fonts/Beliau.otf') format('opentype'),
-		url('../fonts/Beliau.otf') format('truetype');
+		url('../fonts//Beliau.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -231,19 +231,26 @@ h5 {
 	color: #ffffff !important;
 }
 
-.text_sec1 {
-	display: flex;
-	width: 44vh;
-	min-width: 250px;
-	flex-direction: row;
-	flex-wrap: wrap;
-	align-content: flex-end;
-	justify-content: flex-start;
-	align-items: center;
-	margin-top: 18%;
+.title-intro{
 	position: relative;
-	margin-left: 16%;
-	line-height: normal;
+	font-size: 5em;	
+	font-family: 'Beliau-Regular';
+	letter-spacing: 0.01em;
+}
+
+.text_sec1 {
+    display: flex;
+    width: 24vw;
+    min-width: 250px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 20%;
+    position: relative;
+    margin-left: 14%;
+    line-height: normal;
 }
 
 .title {
@@ -350,12 +357,13 @@ textarea {
 }
 
 .logo2 {
-	height: auto;
-	width: 13vw;
-	min-width: 100px;
-	padding: 3px;
-	max-width: 474px;
-	margin-left: 28%;
+    height: auto;
+    width: 13vw;
+    min-width: 100px;
+    padding: 3px;
+    max-width: 474px;
+    margin-left: 28%;
+    margin-top: 10%;
 }
 
 .header-vertical-line {
@@ -997,12 +1005,12 @@ h6 {
 }
 
 h3 {
-	font-family: 'Beliau';
-	font-size: 1.8em;
-	margin-bottom: 1rem;
-	font-weight: lighter;
-	text-align: center;
-	margin: 2%;
+    font-family: 'Beliau';
+    font-size: 1.8em;
+    margin-bottom: 1rem;
+    font-weight: lighter;
+    text-align: center;
+    margin: 7%;
 }
 
 .bottom-left {
@@ -1057,13 +1065,6 @@ h2 {
 	letter-spacing: -0.05em;
 }
 
-@media screen and (max-width: 736px) {
-
-	h2 {
-		font-size: 1.5em;
-	}
-
-}
 
 strong,
 b {
@@ -1140,18 +1141,6 @@ table {
 	flex-wrap: wrap;
 }
 
-@media screen and (max-width: 736px) {
-
-	.box {
-		padding: 1em;
-	}
-
-	.box.style2 {
-		padding: 1.5em 1.25em 1.5em 1.25em;
-		background-color: rgba(255, 255, 255, 0.9);
-	}
-
-}
 
 /* Button */
 
@@ -1921,27 +1910,7 @@ body.is-touch .poptrox-popup .closer {
 	opacity: 1.0 !important;
 }
 
-@media screen and (max-width: 736px) {
 
-	.poptrox-popup .nav-next:before,
-	.poptrox-popup .nav-previous:before {
-		width: 48px;
-		height: 32px;
-		background-size: contain;
-		margin: -16px 0 0 0;
-	}
-
-	.poptrox-popup .closer:before {
-		right: 12px;
-		top: 12px;
-		width: 20px;
-		height: 20px;
-		box-shadow: inset 0 0 0 1px #fff;
-		background-size: contain;
-		opacity: 0.65;
-	}
-
-}
 
 /* Gallery */
 
@@ -2522,43 +2491,12 @@ body.is-touch .poptrox-popup .closer {
 
 
 
-@media screen and (max-width: 736px) {
-
-	#header {
-		height: 2.5em;
-		line-height: 2.5em;
-	}
-
-	#header h1 {
-		text-align: center;
-		position: relative;
-		left: 0;
-		top: 0;
-		height: 2.5em;
-		line-height: 2.5em;
-	}
-
-	#header h1 a {
-		font-size: 1em;
-	}
-
-	#header nav {
-		display: none;
-	}
-
-}
 
 body {
 	padding-top: 0em;
 }
 
-@media screen and (max-width: 736px) {
 
-	body {
-		padding-top: 2.5em;
-	}
-
-}
 
 /* Main */
 
@@ -2601,7 +2539,7 @@ body {
 }
 
 .main.style1 h2 {
-	font-size: 2.25em;
+	font-size: 5em;
 	line-height: 1em;
 	margin-bottom: 1vh;
 	margin-left: 0vw;
@@ -2619,13 +2557,13 @@ body {
 }
 
 .parag1 {
-	margin-bottom: -3vh;
-	margin-top: 0vh;
-	font-family: 'Brinnan-Light';
-	font-weight: bold;
-	font-size: 1em;
+    margin-bottom: 0vh;
+    margin-top: 0vh;
+    font-family: 'Brinnan-Light';
+    font-weight: bold;
+    font-size: 1.2em;
+    text-align: left;
 }
-
 .main.style1>.content {
 	-moz-transition: opacity 1s ease;
 	-webkit-transition: opacity 1s ease;
@@ -2748,7 +2686,7 @@ body {
 }
 
 .text-input {
-	line-height: 1em !important;
+	line-height: 2em !important;
 	border: none !important;
 	border-bottom: 1px solid #ffffff !important;
 	background-color: transparent !important;
@@ -3593,53 +3531,7 @@ img {
 
 }
 
-@media screen and (max-width: 736px) {
 
-	.main>.content br {
-		display: none;
-	}
-
-	.main.fullscreen {
-		height: 100vh !important;
-	}
-
-	.main.style1 {
-		padding: 4em 15px 4em 15px;
-	}
-
-	.main.style1 h2 {
-		font-size: 3em;
-	}
-
-	.main.style2 {
-		padding: 6em 15px 6em 15px;
-	}
-
-	.main.style2:before,
-	.main.style2:after {
-		display: none !important;
-	}
-
-	.main.style2 .button.anchored {
-		display: none;
-	}
-
-	.main.style2 .content {
-		width: 100%;
-		max-width: 100%;
-		text-align: center;
-		-moz-transform: none;
-		-webkit-transform: none;
-		-ms-transform: none;
-		transform: none;
-	}
-
-	.main.style3 {
-		text-align: center;
-		padding: 3em 10px 3em 10px;
-	}
-
-}
 
 @media screen and (max-width: 480px) {
 
@@ -3717,22 +3609,6 @@ img {
 
 }
 
-@media screen and (max-width: 736px) {
-
-	#footer ul.menu li {
-		border-left: none;
-		display: block;
-		line-height: inherit;
-		margin: 0.25em 0 0 0;
-		padding: 0.25em 0 0 0;
-	}
-
-	#footer ul.menu li:first-child {
-		margin-top: 0;
-		padding-top: 0;
-	}
-
-}
 
 /* Intro */
 
@@ -3772,15 +3648,15 @@ img {
 }
 
 #tree {
-	background-color: #263239;
-	height: 58vh;
-	background-size: cover;
-	background-position: left, bottom center;
-	background-repeat: no-repeat;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
-	align-items: center;
+    background-color: #263239;
+    height: 58vh;
+    background-size: cover;
+    background-position: left, bottom center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #four {
@@ -3795,15 +3671,15 @@ img {
 }
 
 #five {
-	background-color: #be694b;
-	height: 58vh;
-	background-size: cover;
-	background-position: left, bottom center;
-	background-repeat: no-repeat;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
-	align-items: center;
+    background-color: #be694b;
+    height: 58vh;
+    background-size: cover;
+    background-position: left, bottom center;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 #six {
@@ -3840,6 +3716,7 @@ img {
 }
 
 #nine {}
+
 
 #ten {
 	height: 53vh;
@@ -3885,13 +3762,7 @@ img {
 	transform: translateY(100%);
 }
 
-@media screen and (max-width: 736px) {
 
-	#contact .box {
-		padding: 1.5em 1.5em 2em 1.5em;
-	}
-
-}
 
 @media screen and (max-width: 480px) {
 
