--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3356,15 +3356,15 @@ img {
 }
 
 .side-l {
-	width: 30%;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	align-content: flex-start;
-	align-items: flex-start;
-	padding-top: 3%;
-	padding-left: 1%;
-	justify-content: space-between;
+    width: auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    /* padding-top: 0.8em; */
+    padding-left: 1%;
+    justify-content: center;
 }
 
 .side-l a {
@@ -3402,7 +3402,7 @@ img {
 
 .side-center .bl-dow {
 	display: flex;
-	width: 65%;
+	width: 70%;
 	flex-direction: row;
 	flex-wrap: nowrap;
 	align-content: center;
@@ -3411,13 +3411,13 @@ img {
 }
 
 .menu-footer {
-	line-height: 3em;
+	/* line-height: 3em; */
 	display: flex;
 	flex-direction: column;
 	align-content: flex-start;
 	justify-content: flex-start;
 	align-items: flex-start;
-	margin-top: 4%;
+	/* margin-top: 4%; */
 }
 
 .logo2down {
@@ -3449,13 +3449,14 @@ img {
 }
 
 .side-r {
-	display: flex;
-	flex-direction: column;
-	align-content: flex-start;
-	justify-content: flex-end;
-	align-items: flex-start;
-	height: inherit;
-	width: 27%;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: flex-start;
+    height: auto;
+    width: 26%;
+    flex-wrap: nowrap;
 }
 
 .container-icons {
@@ -3542,11 +3543,11 @@ img {
     font-size: 0.74em;
     font-family: Brinnan-Light;
     color: #ffffff;
-    margin-left: 1px;
-    margin-right: 29%;
-    margin-top: -6%;
-    width: 84%;
-    margin-bottom: 2em;
+    /* margin-left: 1px; */
+    /* margin-right: 29%; */
+    /* margin-top: -6%; */
+    /* width: 84%; */
+    /* margin-bottom: 2em; */
 }
 
 .logo2down {
@@ -3621,26 +3622,28 @@ img {
 /* Footer */
 
 #footer {
-	display: -moz-flex;
-	display: -webkit-flex;
-	display: -ms-flex;
-	display: flex;
-	-moz-align-items: center;
-	-webkit-align-items: center;
-	-ms-align-items: center;
-	align-items: flex-end;
-	-moz-justify-content: space-between;
-	-webkit-justify-content: space-between;
-	-ms-justify-content: space-between;
-	justify-content: space-between;
-	position: relative;
-	margin: 0;
-	line-height: 1em;
-	padding: 0.5em;
-	background: #0b1b30;
-	color: rgba(185, 186, 187, 0.5);
-
-	height: 14vh;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+    -moz-align-items: center;
+    -webkit-align-items: center;
+    -ms-align-items: center;
+    align-items: center;
+    -moz-justify-content: space-between;
+    -webkit-justify-content: space-between;
+    -ms-justify-content: space-between;
+    justify-content: center;
+    position: relative;
+    margin: 0;
+    line-height: 1em;
+    padding: 0.5em;
+    background: #0b1b30;
+    color: rgba(185, 186, 187, 0.5);
+    height: 14vh;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: stretch;
 }
 
 #footer>* {
