--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3359,6 +3359,26 @@ img {
 
 }
 
+.exclaim {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-end;
+	flex-wrap: wrap;
+	align-content: flex-start;
+	justify-content: space-between;
+	text-align: center;
+	width: 16%;
+	margin-left: 10vw;
+}
+
+.updates {
+	line-height: 1.5em;
+	font-size: 0.84em;
+	font-family: Brinnan-Light;
+	color: #ffffff;
+	text-align: center;
+}
+
 
 
 
