--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -8,8 +8,7 @@
         align-items: flex-end;
         width: 100%;
         height: auto;
-        padding: 5px;
-        min-height: 400px;
+        padding: 15px;
     }
 
     .side-l {
@@ -92,7 +91,7 @@
         flex-wrap: nowrap;
         align-content: center;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-end;
         width: 100%;
         height: auto;
         padding: 15px;
@@ -151,7 +150,7 @@
         flex-wrap: nowrap;
         align-content: center;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-end;
         width: 100%;
         height: auto;
         padding: 15px;
@@ -210,10 +209,10 @@
         flex-wrap: nowrap;
         align-content: center;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-end;
         width: 100%;
         height: auto;
-        padding: 15px;
+        padding: 5px;
     }
 
     .side-l {
@@ -292,7 +291,7 @@
         flex-wrap: nowrap;
         align-content: center;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-end;
         width: 100%;
         height: auto;
         padding: 5px;
@@ -391,7 +390,7 @@
         flex-wrap: nowrap;
         align-content: center;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-end;
         width: 100%;
         height: auto;
         padding: 5px;
@@ -472,7 +471,7 @@
         flex-wrap: nowrap;
         align-content: center;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-end;
         width: 100%;
         height: auto;
         padding: 5px;
@@ -595,10 +594,11 @@
         flex-direction: row;
         align-content: flex-end;
         justify-content: center;
-        align-items: center;
+        align-items: flex-end;
         height: auto;
         width: 100%;
         padding-bottom: 1em;
+        flex-wrap: wrap;
     }
 
 
@@ -611,7 +611,21 @@
         justify-content: center;
         align-items: center;
         position: relative;
-        padding-right: 32vw;
+        padding-right: 0vw;
+        margin-bottom: -14vh;
+    }
+
+    .logo2down {
+        width: 97%;
+        min-width: 100px;
+        max-width: 956px;
+        height: auto;
+        position: relative;
+        left: 0%;
+        padding: 1px;
+        margin-bottom: 0%;
+        margin-top: 0%;
+        margin-left: 22%;
     }
 
     .side-center .lst {
@@ -620,11 +634,12 @@
     }
 
     .logo-fifth {
-        left: 0%;
+        left: -90%;
         height: auto;
         width: 3%;
         max-width: 200px;
         position: relative;
+        top: 19vh;
     }
 
     /* Estilos para o conteúdo do modal */
@@ -668,8 +683,20 @@
         top: 0%;
     }
 
+
+
     .adress {
-        font-size: 1.35em;
+        font-size: 2.35vw;
+        font-family: "Brinnan-Light";
+        color: #ffffff;
+        margin-left: 0px;
+        margin-right: -48%;
+        margin-bottom: 0;
+        width: 100%;
+        height: 1%;
+        text-align: center;
+        position: relative;
+        padding: 3px;
     }
 
     .side-center .lst {
@@ -690,6 +717,29 @@
 
     .logodown {
         display: none;
+    }
+
+    .exclaim {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        justify-content: space-between;
+        text-align: center;
+        width: 18%;
+        margin-left: 13vw;
+        margin-bottom: 0;
+    }
+
+    .updates {
+        line-height: 1.5em;
+        font-size: 0.84em;
+        font-family: Brinnan-Light;
+        color: #ffffff;
+        text-align: center;
+        margin-bottom: -5vh;
+        width: 33vw;
     }
 
 
@@ -826,7 +876,8 @@
         justify-content: center;
         align-items: center;
         position: relative;
-        padding-left: 16vw;
+        padding-left: 7vw;
+        padding-top: 47px;
     }
 
     .side-center .lst {
@@ -834,7 +885,7 @@
     }
 
     .logo-fifth {
-        left: 0%;
+        left: -82%;
         height: auto;
         width: 3%;
         max-width: 200px;
@@ -1180,7 +1231,7 @@
     }
 
     .side-center .bl-dow {
-        padding-left: 23vw;
+        padding-left: 3vw;
     }
 
     .side-center .lst {
@@ -1188,7 +1239,7 @@
     }
 
     .logo-fifth {
-        left: 0%;
+        left: -24vw;
         height: auto;
         width: 3%;
         max-width: 200px;
