--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -639,7 +639,7 @@
         width: 3%;
         max-width: 200px;
         position: relative;
-        top: 19vh;
+        top: 114px;
     }
 
     /* Estilos para o conteúdo do modal */
@@ -728,7 +728,7 @@
         justify-content: space-between;
         text-align: center;
         width: 18%;
-        margin-left: 13vw;
+        margin-left: 0;
         margin-bottom: 0;
     }
 
@@ -739,7 +739,13 @@
         color: #ffffff;
         text-align: center;
         margin-bottom: -5vh;
-        width: 33vw;
+        width: 263px;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
     }
 
 
@@ -783,7 +789,7 @@
 }
 
 
-@media (max-width: 767px) {
+@media (max-width: 770px) {
     .text_sec1 {
         margin-top: 39vh;
         margin-left: 0vw;
@@ -885,11 +891,12 @@
     }
 
     .logo-fifth {
-        left: -82%;
+        left: -46%;
         height: auto;
-        width: 3%;
-        max-width: 200px;
+        width: 10%;
+        max-width: 260px;
         position: relative;
+        top: 145px;
     }
 
     /* Estilos para o conteúdo do modal */
@@ -920,21 +927,35 @@
     }
 
     .side-r {
-        padding-bottom: 35px;
+        padding-bottom: 48px;
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
+        justify-content: center;
+        align-items: flex-end;
         height: auto;
-        width: 45%;
+        width: 44%;
         flex-wrap: nowrap;
         align-content: center;
         position: relative;
-        top: 0%;
+        padding-top: 3vh;
+    }
+
+    .logo2down {
+        width: 86%;
+        min-width: 100px;
+        max-width: 956px;
+        height: auto;
+        position: relative;
+        left: 0%;
+        padding: 1px;
+        margin-bottom: 0%;
+        margin-top: 0%;
+        margin-left: 43%;
     }
 
     .adress {
         font-size: 1.35em;
+        margin-right: -36%;
     }
 
     .side-center .lst {
@@ -1230,9 +1251,9 @@
         position: relative;
     }
 
-    .side-center .bl-dow {
+    /* .side-center .bl-dow {
         padding-left: 3vw;
-    }
+    } */
 
     .side-center .lst {
         width: 183px;
@@ -1289,7 +1310,7 @@
     }
 
     .adress {
-        font-size: 1.35em;
+        font-size: 1.1em;
     }
 
     .side-center .lst {
@@ -1310,6 +1331,24 @@
 
     .logodown {
         display: none;
+    }
+
+    .logo2down {
+        margin-left: 43%;
+    }
+
+    .adress {
+        /* font-size: 2.35vw; */
+        font-family: "Brinnan-Light";
+        color: #ffffff;
+        margin-left: 0px;
+        margin-right: -80%;
+        margin-bottom: 0;
+        width: 100%;
+        height: 1%;
+        text-align: center;
+        position: relative;
+        padding: 3px;
     }
 }
 
@@ -1341,9 +1380,22 @@
         padding-bottom: 1em;
     }
 
-    .side-center .bl-dow {
-        padding-left: 36vw;
+    .adress {
+        /* font-size: 2.35vw; */
+        font-family: "Brinnan-Light";
+        color: #ffffff;
+        margin-left: 0px;
+        margin-right: -80%;
+        margin-bottom: 1vh;
+        width: 100%;
+        height: 1%;
+        text-align: center;
+        position: relative;
+        padding: 3px;
+        margin-top: 14px;
     }
+
+
 
 
 }
@@ -1351,7 +1403,20 @@
 
 @media (max-width: 335px) {
     .adress {
-        font-size: 1.1em;
+        font-size: 1em;
+        font-family: "Brinnan-Light";
+        color: #ffffff;
+        margin-left: 0px;
+        margin-right: -80%;
+        margin-bottom: 1vh;
+        width: 100%;
+        height: 4%;
+        text-align: center;
+        position: relative;
+        padding: 3px;
+        margin-top: 2vh;
+        line-height: normal;
+
     }
 
     .BALANCE {
@@ -1363,7 +1428,50 @@
     }
 
     .side-center .bl-dow {
-        padding-left: 43vw;
+        padding-left: 21vw;
+    }
+
+    .updates {
+        line-height: 1.5em;
+        font-size: 0.84em;
+        font-family: Brinnan-Light;
+        color: #ffffff;
+        text-align: center;
+        margin-bottom: -5vh;
+        width: 193px;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-content: center;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .side-center .bl-dow {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-content: center;
+        justify-content: center;
+        align-items: baseline;
+        position: relative;
+    }
+
+    .logo-fifth {
+        left: -26vw;
+        height: auto;
+        width: 31vw;
+        max-width: 200px;
+        position: relative;
+        min-width: 40px;
+        top: 17vh
+    }
+
+    .logo2down {
+        width: 88%;
+        min-width: 155px;
+        margin-left: 0;
     }
 
 }
